--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 @import url("http://use.fontawesome.com/releaases/v6.5.1/css/all.css");
 
+@font-face {
+	font-family: myFont;
+	src: url("./Pacifico-Regular.ttf");
+}
 body {
     height: 100vh;
     margin: 0;
@@ -33,6 +37,7 @@ h1 {
     animation: spin 2s;
     -webkit-animation: spin 2s infinite linear forwards;
 }
+
 
 @keyframes spin {
     to {
@@ -172,7 +177,7 @@ h1 {
     border-radius: 50%;
     background: whitesmoke;
     top: 67%;
-    left: 50%
+    left: 50%;
 }
 
 .snow {
@@ -181,6 +186,233 @@ h1 {
     background: lightblue;
     border-radius: 50%;
     animation: fall linear;
+}
+
+
+.wreath {
+    position: absolute;
+    z-index: 3;
+    width: 18%;
+    height: 18%;
+    width: 30px; 
+    height: 30px; 
+    background-image: url("./images/christmas-wreath.png");
+    background-size: cover; 
+    margin-top: 145px;
+    margin-left: 260px;
+}
+
+
+.mistletoe{
+    position: absolute;
+    z-index: 3;
+    width: 18%;
+    height: 18%;
+    width: 30px; 
+    height: 30px; 
+    background-image: url("./images/mistletoe.png");
+    background-size: cover; 
+    margin-top: 170px;
+    margin-left: 200px;
+    transform: rotate(-45deg);
+}
+
+
+.ball1 {
+    position: absolute;
+    z-index: 3;
+    width: 18%;
+    height: 18%;
+    width: 30px;
+    height: 30px;
+    background-image: url("./images/ball1.png");
+    background-size: cover;
+    margin-top: 230px;
+    margin-left: 200px;
+    transform: rotate(20deg);
+}
+
+
+.ball2{
+    position: absolute;
+    z-index: 3;
+    width: 18%;
+    height: 18%;
+    width: 30px;
+    height: 30px;
+    background-image: url("./images/ball2.png");
+    background-size: cover;
+    margin-top: 281px;
+    margin-left: 230px;
+    transform: rotate(-20deg);
+}
+
+
+.santa {
+    position: absolute;
+    z-index: 3;
+    width: 30%;
+    height: 30%;
+    width: 60px;
+    height: 60px;
+    background-image: url("./images/santa-claus.png");
+    background-size: cover;
+    margin-top: 200px;
+    margin-left: 250px;
+    transform: rotate(-25deg);
+}
+
+
+.sock {
+    position: absolute;
+    z-index: 3;
+    width: 18%;
+    height: 18%;
+    width: 30px;
+    height: 30px;
+    background-image: url("./images/christmas-sock.png");
+    background-size: cover;
+    margin-top: 300px;
+    margin-left: 275px;
+    transform: rotate(-20deg);
+    transform: scaleX(-1);
+}
+
+
+.santa2{
+    position: absolute;
+    z-index: 3;
+    width: 30%;
+    height: 30%;
+    width: 50px;
+    height: 50px;
+    background-image: url("./images/santa-claus2.png");
+    background-size: cover;
+    margin-top: 285px;
+    margin-left: 155px;
+    transform: rotate(deg);
+}
+
+
+.gift{
+    position: absolute;
+    z-index: 3;
+    width: 70%;
+    height: 70%;
+    width: 50px;
+    height: 50px;
+    background-image: url("./images/gift-box.png");
+    background-size: cover;
+    margin-top: 370px;
+    margin-left: 200px;
+}
+
+
+.gift2 {
+    position: absolute;
+    z-index: 5;
+    width: 70%;
+    height: 70%;
+    width: 50px;
+    height: 50px;
+    background-image: url("./images/gift-bag.png");
+    background-size: cover;
+    margin-top: 375px;
+    margin-left: 240px;
+
+}
+
+
+.gift3{
+    position: absolute;
+    z-index: 4;
+    width: 70%;
+    height: 70%;
+    width: 50px;
+    height: 50px;
+    background-image: url("./images/gift-box3.png");
+    background-size: cover;
+    margin-top: 360px;
+    margin-left: 266px;
+}
+
+
+.snowman {
+    position: absolute;
+    z-index: 5;
+    width: 100%;
+    height: 100%;
+    width: 200px;
+    height: 200px;
+    background-image: url("./images/snowman.png");
+    background-size: cover;
+    margin-top: 200px;
+    margin-left: -100px;
+    transform : scaleX(-1);
+}
+
+
+.reindeer {
+        position: absolute;
+        z-index: 5;
+        width: 70%;
+        height: 70%;
+        width: 50px;
+        height: 50px;
+        background-image: url("./images/reindeer.png");
+        background-size: cover;
+        margin-top: 10px;
+        margin-left: 20px;
+}
+
+.reindeer2 {
+    position: absolute;
+    z-index: 5;
+    width: 70%;
+    height: 70%;
+    width: 50px;
+    height: 50px;
+    background-image: url("./images/reindeer.png");
+    background-size: cover;
+    margin-top: -10px;
+    margin-left: 120px;
+}
+
+
+
+.content__title {
+        animation-name: typewrite;
+        animation-duration: 2s;
+        animation-timing-function: ease-in-out;
+        z-index: 3;
+        font-family: myFont;
+        font-weight: 500;
+        font-size: 80px;
+        color: aquamarine;
+        margin-top: -100px;
+        line-height: 120px; 
+        width: 300px;
+        white-space: nowrap;
+        position: relative;
+        animation: blink_text 2s linear infinite;
+
+}
+
+
+.blink_text{
+    width:200px;
+    height: 50px;
+    padding: 15px;	
+    text-align: center;
+    line-height: 50px;
+}
+
+
+    
+@keyframes blink_text{
+0%{opacity: 0;}
+50%{opacity: .5;}
+100%{opacity: 1;}
 }
 
 @keyframes fall {
