--- a/style.css
+++ b/style.css
@@ -170,12 +170,12 @@ h1 {
 
 .snow-ground {
     margin-left: -60px;
-    z-index: -5;
+    z-index: -4;
     position: absolute;
     width: 120px;
     height: 30px;
     border-radius: 50%;
-    background: whitesmoke;
+    background: rgb(123, 119, 119);
     top: 67%;
     left: 50%;
 }
@@ -273,7 +273,7 @@ h1 {
     background-image: url("./images/christmas-sock.png");
     background-size: cover;
     margin-top: 300px;
-    margin-left: 275px;
+    margin-left: 285px;
     transform: rotate(-20deg);
     transform: scaleX(-1);
 }
@@ -346,9 +346,8 @@ h1 {
     height: 200px;
     background-image: url("./images/snowman.png");
     background-size: cover;
-    margin-top: 200px;
-    margin-left: -100px;
-    transform : scaleX(-1);
+    margin-top: 325px;
+    margin-left: 650px;
 }
 
 
@@ -379,6 +378,64 @@ h1 {
 }
 
 
+.reindeer3 {
+    position: absolute;
+    z-index: 5;
+    width: 70%;
+    height: 70%;
+    width: 50px;
+    height: 50px;
+    background-image: url("./images/reindeer.png");
+    background-size: cover;
+    margin-top: 30px;
+    margin-left: -70px;
+}
+
+
+.reindeer4 {
+    position: absolute;
+    z-index: 5;
+    width: 70%;
+    height: 70%;
+    width: 50px;
+    height: 50px;
+    background-image: url("./images/reindeer.png");
+    background-size: cover;
+    margin-top: 30px;
+    margin-left: 540px;
+    transform: scaleX(-1);
+}
+
+
+.reindeer5 {
+    position: absolute;
+    z-index: 5;
+    width: 70%;
+    height: 70%;
+    width: 50px;
+    height: 50px;
+    background-image: url("./images/reindeer.png");
+    background-size: cover;
+    margin-top: 10px;
+    margin-left: 440px;
+    transform: scaleX(-1);
+}
+
+
+.reindeer6 {
+    position: absolute;
+    z-index: 5;
+    width: 70%;
+    height: 70%;
+    width: 50px;
+    height: 50px;
+    background-image: url("./images/reindeer.png");
+    background-size: cover;
+    margin-top: -10px;
+    margin-left: 340px;
+    transform: scaleX(-1);
+}
+
 
 .content__title {
         animation-name: typewrite;
@@ -389,30 +446,124 @@ h1 {
         font-weight: 500;
         font-size: 80px;
         color: aquamarine;
-        margin-top: -100px;
+        margin-top: -340px;
+        margin-left: -250px;
         line-height: 120px; 
         width: 300px;
         white-space: nowrap;
         position: relative;
         animation: blink_text 2s linear infinite;
-
 }
 
 
-.blink_text{
-    width:200px;
-    height: 50px;
-    padding: 15px;	
-    text-align: center;
-    line-height: 50px;
+.big_santa {
+    z-index: 3;
+    position: absolute;
+    width: 10%;
+    height: 10%;
+    width: 200px;
+    height: 200px;
+    background-size: cover;
+    margin-top: 90px;
+    margin-left: 620px;
+    transform: rotate(20deg);
+    background-image: url("./images/santa-claus-sled.png");
 }
 
 
-    
+.penguin {
+    z-index: 3;
+    position: absolute;
+    width: 70%;
+    height: 70%;
+    width: 100px;
+    height: 100px;
+    margin-top: 300px;
+    margin-left: 450px;
+    background-size: cover;
+    background-image: url("./images/penguin.png");
+}
+
+
+.ground {
+    z-index: -5;
+    margin-left: -570px;
+    margin-top: 270px;
+    position: absolute;
+    width: 1800px;
+    height: 700px;
+    border-radius: 70%;
+    background: rgb(245, 245, 245)
+}
+
+
+.flying_reindeer{
+    z-index: 2;
+    position: relative;
+    margin-left: 567px;
+    margin-top: 70px;
+    width: 150px;
+    height: 150px;
+    transform: rotate(20deg) scaleX(-1);
+    background-image: url("./images/flying_reindeer.png");
+    background-size: cover;
+}
+
+
+.house {
+    z-index: 3;
+    position: absolute;
+    margin-left: -250px;
+    margin-top: -20px;
+    width: 275px;
+    height: 275px;
+    background-size: cover;
+    background-image: url("./images/house.png");
+}
+
+.santa3 {
+    z-index: 2;
+    position: absolute;
+    margin-left: -67px;
+    margin-top: -65px;
+    width: 60px;
+    height: 60px;
+    background-size: cover;
+    background-image: url("./images/santa-claus5.png");
+}
+
+
 @keyframes blink_text{
-0%{opacity: 0;}
-50%{opacity: .5;}
-100%{opacity: 1;}
+0%
+{
+    color: red;
+    opacity: 0;
+    text-shadow: 2px 2px 10px red;
+}
+
+
+50%
+{
+    color: yellow;
+    opacity: .5;
+    text-shadow: 2px 2px 10px yellow;
+}
+100%
+{
+    color: #00d6c4;
+    opacity: 1;
+    text-shadow: 2px 2px 10px #00d6c4;
+}
+}
+
+@keyframes blink1 {
+    30% {
+        box-shadow: 2px 2px 20px  rgba(255, 251, 36, 0.899);
+    }
+
+    60% {
+        box-shadow: 2px 2px 2cap  rgba(255, 251, 36, 0.899);
+    }
 }
 
 @keyframes fall {
